2006-05-10  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: support for inverted searchs
	* src/PeopleModel.py: support for inverted searchs
	* src/DisplayModel.py: support for inverted searchs
	* src/PageView.py: support for inverted searchs, correct col index
	* src/Filters/_SearchBar.py: support for inverted searchs, change
	button order
	* src/Filters/_SearchFilter.py: support for inverted searchs

2006-05-10  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py (func_person_attr): Typos.

2006-05-10  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: remove debug statement
	* src/PeopleModel.py: use SearchFilter
	* src/DisplayModels.py: handle search filter
	* src/PageView.py: search bar support
	* src/Filters/_SearchBar.py: remove SearchFilter to separate file, 
	fix status bar message, improved buttons.
	* src/Filters/_SearchFilter.py: added
	* src/Filters/__init__.py: added SearchBar

2006-05-10  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_DbUtils.py (db_copy): Use batch transaction.
	* src/GrampsDb/_GrampsBSDDB.py (transaction_begin): Proper indentation.

2006-05-09  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: search bar implementation
	* src/PeopleModel.py: search bar implementation
	* src/PageView.py: search bar implementation
	* src/Filters/_SearchBar.py: search bar functionality
	* src/Filters/__init__.py: search bar functionality
	* src/AddMedia.py: remember last directory for images for 
	the session

2006-05-09  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (load_from): Add method.
	* src/GrampsDb/_GrampsXMLDB.py (load_from): Add method.
	* src/GrampsDb/_GrampsGEDDB.py (load_from): Add method.
	* src/GrampsDb/_GrampsDbBase.py (load_from): Add method.
	* src/GrampsDb/_WriteGrdb.py: Use db_copy.
	* src/GrampsDb/_DbUtils.py (db_copy): Add function.
	* src/ViewManager.py: Save as support.